# taming-transformers

./: .gitignore  Dockerfile  Finetune_VAE.ipynb  LICENSE.txt  README.md  docker-compose.yml  environment.yaml  format_index.py  index.html  index.template  listofdivs.template  main.py  pyproject.toml  setup.py  the last stand
.github/workflows/: ci.yaml
Experiments/CelebA-HQ-8f-8k/: 2021-09-18T02-25-13-project.yaml  README.md
assets/css/: main.css
assets/js/: main.js
configs/: coco_cond_stage.yaml  coco_scene_images_transformer.yaml  custom_transformer.yaml  custom_vqgan.yaml  faceshq_transformer.yaml  finetune_vae.yaml  imagenet_vqgan.yaml  open_images_scene_images_transformer.yaml  sflckr_transformer.yaml  sflckr_transformer_local.yaml
data/: customCelebAHQ_test.txt  customCelebAHQ_train.txt
paper/: paper.bib
scripts/: build_sflckr.py  extract_segmentation.py  extract_submodel.py  make_samples.py  make_scene_samples.py  sample_conditional.py  sample_fast.py  taming-transformers.ipynb  taming_transformers.ipynb  test_import.py
taming/: __init__.py  util.py
taming/data/: ade20k.py  annotated_objects_coco.py  annotated_objects_dataset.py  annotated_objects_open_images.py  base.py  coco.py  custom.py  faceshq.py  helper_types.py  image_transforms.py  imagenet.py  sflckr.py  utils.py
taming/data/conditional_builder/: objects_bbox.py  objects_center_points.py  utils.py
taming/models/: cond_transformer.py  vqgan.py
taming/modules/: util.py
taming/modules/discriminator/: model.py
taming/modules/losses/: __init__.py  lpips.py  vqperceptual.py
(+2 files in other folders)
